<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:gravity="center"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".Sign_Up_Success">

    <TextView
        android:id="@+id/signedUp_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:lines="1"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/signedUp_Title"
        android:textSize="42sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:text="@string/signedUp_SubTitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signedUp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:autoLink="email"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp">
        </Space>

        <TextView
            android:id="@+id/signedUp_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp">
        </Space>

        <TextView
            android:id="@+id/signedUp_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/white"/>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#1EB980"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:text="@string/singIn_hint" />

</LinearLayout>