<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:lines="1"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/signUp_Title"
        android:textSize="42sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:text="@string/signUp_SubTitle"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:fadingEdge="none"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/signUp_hint_first_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp">
            </Space>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/signUp_hint_email"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxStrokeErrorColor="@color/colorAccent"
                android:textColorHint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp">
            </Space>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/signUp_hint_password"
                android:textColorHint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp">
            </Space>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/signUp_hint_website"
                android:textColorHint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#1EB980"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:gravity="center"
        android:text="@string/signUp_hint_submit" />

</LinearLayout>